--- a/Sample_Project/Sample_Project.csproj
+++ b/Sample_Project/Sample_Project.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Google.cs" />
     <Compile Include="main.cs" />
   </ItemGroup>
   <ItemGroup>
