Modifed the Google Class and renamed the Git
1.  Removed all the namespaces
2.  Modifed Google with constructor
3.  Renamed the Git Class to MainStartup

--- a/Sample_Project/Sample_Project.csproj
+++ b/Sample_Project/Sample_Project.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Google.cs" />
-    <Compile Include="main.cs" />
+    <Compile Include="MainStartup.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
