Wrote Pedagogical  Example of Classes and Objects
1.  Wrote Class Person: Information about name/salary
2.  Wrote Class Group : a Container of Person objects
3.  Wrote a simple Example of Group with 3 persons
:

--- a/Sample_Project/Sample_Project.csproj
+++ b/Sample_Project/Sample_Project.csproj
@@ -35,7 +35,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Google.cs" />
+    <Compile Include="Group.cs" />
     <Compile Include="MainStartup.cs" />
+    <Compile Include="Person.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
